@@ -1,8 +1,9 @@
 sensord (0.6.39) unstable; urgency=low
+
   [Pia Niemela] 
   * Added setDataRangeIndex utility for easier range swapping
   * Fixed MOBILITY-2535
-	
+
   [Lihan Guo]
   * Fixed coverity defects.
 
@@ -12,6 +13,8 @@ sensord (0.6.39) unstable; urgency=low
 
   [Antti Virtanen]
   * Fixed bug from SysfsAdaptor::writeToFile(): it used wrong method to get size of the buffer.
+  * Removed FilterProperty: it had possible memory leak and could return references to already deleted memory.
+  * AccelerometerChain transformation matrix is now instance specific.
 
  -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Tue, 08 Feb 2011 13:35:32 +0200
 
